<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_vehicles"
            android:title="@string/vehicles"
            android:icon="@drawable/truck"/>
        <item
            android:id="@+id/nav_devices"
            android:icon="@drawable/vehicles"
            android:title="@string/devices" />
        <item
            android:id="@+id/nav_driver"
            android:title="@string/drivers"
            android:icon="@drawable/drivers"/>
        <item
            android:title="@string/about_app"
            android:icon="@drawable/about"
            android:id="@+id/about_app"/>
        <item
            android:title="@string/terms_and_conditions"
            android:icon="@drawable/t_and_c"
            android:id="@+id/terms_and_conditions"/>
        <item
            android:title="@string/privacy_policy"
            android:icon="@drawable/privacy"
            android:id="@+id/privacy_policy"/>
        <item
            android:id="@+id/change_password"
            android:title="@string/change_password"
            android:icon="@drawable/change_password"/>
        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/logout"/>
    </group>

    <!--Home
 -> Screens are yet to come
 -> Screens are yet to come
 -> Screens are yet to come
-> Screens are yet to come
 -> Screens are yet to come
 -> Screens are yet to come
 -> Screens are yet to come
-->

   <!-- <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>-->

</menu>
                                                                                                                                                                                                                                                                                                    