<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DeviceAllocationHistory"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/toolbar_layout"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/ll_back_btn">
                <ImageView
                    android:layout_width="@dimen/activity_profile_margin"
                    android:layout_height="@dimen/activity_profile_margin"
                    android:src="@drawable/back"
                    android:contentDescription="@string/app_name"
                    android:id="@+id/iv_back_btn"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/view_margin"
                    android:layout_marginLeft="@dimen/view_margin"/>
            </LinearLayout>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:id="@+id/tv_title"
                    android:textSize="@dimen/activity_textSize_large"/>
            </androidx.appcompat.widget.Toolbar>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/view_margin"
        android:layout_marginRight="@dimen/view_margin"
        android:layout_marginTop="@dimen/large_view_margin">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_num"
            android:textSize="@dimen/activity_textSize_small"
            android:textColor="@color/text_color_light"
            android:padding="@dimen/margin_two"
            android:id="@+id/tv_vehicle_num"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/allocated_on"
            android:textSize="@dimen/activity_textSize_small"
            android:textColor="@color/text_color_light"
            android:padding="@dimen/margin_two"
            android:gravity="end"
            android:id="@+id/tv_allocated_on_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/view_margin"
        android:layout_marginRight="@dimen/view_margin"
        android:layout_marginTop="@dimen/margin_five">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/device_serial"
            android:textSize="@dimen/activity_textSize_small"
            android:textColor="@color/text_color_light"
            android:padding="@dimen/margin_two"
            android:id="@+id/tv_device_serial_num"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/activity_textSize_small"
            android:gravity="end"
            android:textColor="@color/text_color_light"
            android:padding="@dimen/margin_two"
            android:id="@+id/tv_allocated_on"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:layout_marginTop="@dimen/view_margin">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/activity_textSize_small"
            android:textColor="@color/white"
            android:padding="@dimen/margin_two"
            android:id="@+id/tv_device_serial_heading"
            android:text="@string/device_serial_no"
            android:gravity="center"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/activity_textSize_small"
            android:textColor="@color/white"
            android:padding="@dimen/margin_two"
            android:id="@+id/tv_allocated_on_heading"
            android:text="@string/allocated_on_"
            android:layout_gravity="center"
            android:gravity="center"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/activity_textSize_small"
            android:textColor="@color/white"
            android:padding="@dimen/margin_two"
            android:text="@string/allocated_by"
            android:id="@+id/tv_allocated_by_heading"
            android:gravity="center"/>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lv_data_list"
        android:visibility="gone"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tv_data_not_found"
        android:text="@string/no_data_found"
        android:gravity="center"
        android:textSize="@dimen/activity_textSize_large"/>



</LinearLayout>