<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.techuva.vehicletracking.activity.SplashActivity"
    android:background="@color/colorPrimary"
    android:padding="@dimen/large_view_margin"
    android:orientation="vertical">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_app_logo"
        app:srcCompat="@drawable/splash_logo"
        android:visibility="visible"
        android:layout_gravity="top"
        android:contentDescription="@string/app_name"
        android:layout_margin="@dimen/large_view_margin"
        android:padding="@dimen/large_view_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:layout_marginTop="@dimen/elarge_view_margin"
        android:layout_marginBottom="@dimen/view_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_splash_copy_right"
            android:textSize="@dimen/activity_textSize_small_16"
            android:id="@+id/tv_from"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy_right"
            android:textSize="@dimen/activity_textSize_small_16"
            android:id="@+id/tv_tech"
            android:textColor="@color/white"
            android:visibility="visible"
            android:gravity="center"
            android:layout_gravity="bottom|center_horizontal"/>

    </LinearLayout>
</FrameLayout>