<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DeviceAllocationHistory"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/toolbar_layout"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/ll_back_btn">
                <ImageView
                    android:layout_width="@dimen/activity_profile_margin"
                    android:layout_height="@dimen/activity_profile_margin"
                    android:src="@drawable/back"
                    android:contentDescription="@string/app_name"
                    android:id="@+id/iv_back_btn"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/view_margin"
                    android:layout_marginLeft="@dimen/view_margin"/>
            </LinearLayout>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:id="@+id/tv_title"
                    android:textSize="@dimen/activity_textSize_large"/>
            </androidx.appcompat.widget.Toolbar>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/text_color_light_op"
        android:padding="@dimen/margin_five">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/view_margin"
            android:layout_marginRight="@dimen/view_margin"
            android:layout_marginTop="@dimen/view_margin">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_num"
                android:textSize="@dimen/activity_textSize_small"
                android:textColor="@color/text_color_light"
                android:padding="@dimen/margin_two"
                android:id="@+id/tv_vehicle_num"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/allocated_on"
                android:textSize="@dimen/activity_textSize_small"
                android:textColor="@color/text_color_light"
                android:padding="@dimen/margin_two"
                android:gravity="end"
                android:id="@+id/tv_allocated_on_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/view_margin"
            android:layout_marginRight="@dimen/view_margin"
            android:layout_marginTop="@dimen/margin_five">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/device_serial"
                android:textSize="@dimen/activity_textSize_small"
                android:textColor="@color/text_color_light"
                android:padding="@dimen/margin_two"
                android:id="@+id/tv_device_serial_num"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/activity_textSize_small"
                android:gravity="end"
                android:textColor="@color/text_color_light"
                android:padding="@dimen/margin_two"
                android:id="@+id/tv_allocated_on"/>
        </LinearLayout>
    </LinearLayout>





    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fl_data">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/ll_data"
            android:layout_marginLeft="@dimen/view_margin"
            android:layout_marginRight="@dimen/view_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/view_margin"
                android:layout_marginLeft="@dimen/margin_five"
                android:layout_marginRight="@dimen/margin_five"
                android:padding="@dimen/margin_five">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/activity_textSize_small"
                    android:textColor="@color/text_color_light"
                    android:padding="@dimen/margin_two"
                    android:id="@+id/tv_enter_remarks"
                    android:text="@string/enter_remarks"
                    android:paddingTop="@dimen/margin_five"
                    android:paddingBottom="@dimen/margin_five"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/activity_textSize_large"
                    android:textColor="@color/text_color_light"
                    android:padding="@dimen/margin_two"
                    android:background="@null"
                    android:id="@+id/edt_remarks"
                    android:maxLength="80"
                    android:hint="@string/remarks"
                    android:paddingTop="@dimen/margin_five"
                    android:paddingBottom="@dimen/margin_five"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="@dimen/margin_five"
                    android:paddingTop="@dimen/margin_five"
                    android:paddingBottom="@dimen/margin_five"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/zero"
                    android:layout_marginTop="@dimen/margin_three"
                    android:textSize="@dimen/activity_textSize_extra_small"
                    android:textColor="@color/text_color_light"
                    android:id="@+id/tv_letter_count"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_device"
                android:textSize="@dimen/activity_textSize_large"
                android:layout_marginLeft="@dimen/large_view_margin"
                android:layout_marginRight="@dimen/large_view_margin"
                android:id="@+id/tv_choose_device"
                android:textColor="@color/colorPrimary"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/text_color_light"
                android:layout_marginTop="@dimen/margin_five"
                android:paddingTop="@dimen/margin_five"
                android:paddingBottom="@dimen/margin_five"
                android:layout_marginLeft="@dimen/large_view_margin"
                android:layout_marginRight="@dimen/large_view_margin"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rcv_device_list"
                android:visibility="visible"
                android:layout_marginTop="@dimen/view_margin"
                android:layout_marginBottom="60dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom|end"
            android:gravity="end"
            android:background="@color/text_color_light_op">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/clear"
                android:textSize="@dimen/activity_textSize_x_large"
                android:layout_marginLeft="@dimen/large_view_margin"
                android:layout_marginRight="@dimen/large_view_margin"
                android:id="@+id/tv_clear"
                android:gravity="end|center"
                android:padding="@dimen/view_margin"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alloacte"
                android:textSize="@dimen/activity_textSize_large"
                android:layout_marginLeft="@dimen/large_view_margin"
                android:layout_marginRight="@dimen/large_view_margin"
                android:id="@+id/tv_allocate"
                android:background="@drawable/button_background_popup"
                android:textColor="@color/white"
                android:padding="@dimen/view_margin"
                android:layout_margin="@dimen/view_margin"/>
        </LinearLayout>
    </FrameLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tv_data_not_found"
        android:text="@string/no_data_found"
        android:gravity="center"
        android:textSize="@dimen/activity_textSize_large"/>



</LinearLayout>